test/parse-fail/keyword__let.he
fn main
{
    let let = 0; //~ ERROR 2000
}
